fix: improves 3PP logo spacing and hover styles

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -76,7 +76,7 @@ img {
 }
 
 .logo-list {
-  @apply grid gap-2;
+  @apply grid gap-2 -mt-4;
   grid-template-columns: repeat(auto-fit, minmax(6rem, 0.5fr));
 
   & li {
@@ -97,12 +97,12 @@ img {
 }
 
 .tpp-logo-link {
-  @apply border-water-150 rounded bg-white p-4 flex justify-center items-center transition duration-150 ease-in-out transform;
+  @apply border border-transparent rounded bg-white p-4 flex justify-center items-center transition duration-150 ease-in-out transform;
 
   &:hover,
   &:active,
   &:focus {
-    @apply border bg-water-100 -translate-y-1 shadow-md z-10;
+    @apply border-water-150 bg-water-100 -translate-y-1 shadow-md z-10;
   }
 }
 
